# yt-transcribe

./: .gitignore  README.md  pyproject.toml
yt_transcribe/: __init__.py  asr.py  cleaner.py  cli.py  downloader.py  subtitle.py
